🚀 Complete App Store preparation with enhanced subscription system
✅ Build Configuration Fixed
- Fixed .gitignore to exclude .expo directory
- Removed duplicate lock file (bun.lock)
- All expo-doctor checks passing

✅ Enhanced Subscription System
- Added simulation mode for Expo Go testing
- Real Apple Store integration ready
- Complete payment service with mock/real modes
- Backend server with webhook processing

✅ App Store Review Assets
- Landing page with COMING SOON banner
- Complete metadata and descriptions
- Organized review materials structure

✅ Comprehensive Documentation
- Deployment guide for App Store submission
- Subscription testing guide
- Testing checklist for quality assurance

✅ Production Ready
- EAS configuration for builds
- Environment variables setup
- Complete backend integration
- Privacy-first design maintained

Ready for App Store submission! 🎉

--- a/app.json
+++ b/app.json
@@ -6,7 +6,6 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
-
     "icon": "./assets/icon.png",
     "description": "Build lasting habits with your personal AI coach. Track progress, get insights, and achieve your goals with Habit Hero's minimalist approach to habit formation.",
     "splash": {
@@ -58,7 +57,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "habit-hero-vibecode"
+        "projectId": "924fc6a4-56e5-461e-8fc9-7d8468c895b1"
       }
     }
   }
