--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
+    "expo-in-app-purchases": "~14.1.0",
     "expo-image-manipulator": "~13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-insights": "~0.9.3",
