Add backend deployment configuration files
- Added Railway, Vercel, and Render deployment configs
- Updated package.json for proper deployment
- Added Procfile for Heroku compatibility
- Backend ready for cloud deployment

--- a/backend-example/package.json
+++ b/backend-example/package.json
@@ -26,5 +26,8 @@
     "receipt-validation"
   ],
   "author": "Vibecode",
-  "license": "MIT"
+  "license": "MIT",
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
