Fix TypeScript errors preventing build
- Fixed InAppPurchases namespace issue in paymentService.ts
- Fixed expiresDate type issues in webhookService.ts
- Added appVersionSource to EAS config
- Added build configuration for production

Build still failing - need to investigate further

--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 16.0.0"
+    "version": ">= 16.0.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
@@ -18,7 +19,11 @@
     },
     "production": {
       "ios": {
-        "simulator": false
+        "simulator": false,
+        "buildConfiguration": "Release"
+      },
+      "env": {
+        "EXPO_PUBLIC_BACKEND_URL": "https://cd-backend-example-production.up.railway.app"
       }
     }
   },
