Attempt to fix build issues
- Simplified EAS configuration
- Tried preview profile build
- Still failing during Prebuild phase
- Need to investigate further or try alternative approach

--- a/eas.json
+++ b/eas.json
@@ -19,11 +19,7 @@
     },
     "production": {
       "ios": {
-        "simulator": false,
-        "buildConfiguration": "Release"
-      },
-      "env": {
-        "EXPO_PUBLIC_BACKEND_URL": "https://cd-backend-example-production.up.railway.app"
+        "simulator": false
       }
     }
   },
