Fix corrupted image files causing build failure
- Fixed corrupted icon.png and splash.png files
- Switched to JPG versions in app.json
- Build now successful!
- Ready for App Store submission

--- a/app.json
+++ b/app.json
@@ -6,10 +6,10 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/icon.jpg",
     "description": "Build lasting habits with your personal AI coach. Track progress, get insights, and achieve your goals with Habit Hero's minimalist approach to habit formation.",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash.jpg",
       "resizeMode": "contain",
       "backgroundColor": "#000000"
     },
