--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start:go": "expo start --go",
     "start:clear": "expo start --clear",
     "start:go-clear": "expo start --go --clear",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "doctor": "npx expo-doctor",
     "check-deps": "npx expo install --check"
