--- a/ios/HabitHero/Info.plist
+++ b/ios/HabitHero/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>10</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>LSMinimumSystemVersion</key>
@@ -49,5 +49,13 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>Habit Hero uses the camera to let you take progress photos and visual reminders for your habits.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Habit Hero uses the microphone to record voice notes and audio reminders to help you track your habit progress.</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Habit Hero may access your calendar to help you schedule habit reminders and track your progress.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Habit Hero may access your contacts to help you share your progress with friends and family.</string>
 </dict>
 </plist>
