--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "Habit Hero",
     "slug": "habit-hero",
     "scheme": "habit-hero",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "orientation": "portrait",
     "userInterfaceStyle": "automatic",
     "icon": "./assets/icon.jpg",
@@ -11,7 +11,7 @@
     "splash": {
       "image": "./assets/splash.jpg",
       "resizeMode": "contain",
-      "backgroundColor": "#000000"
+      "backgroundColor": "#FFFFFF"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -19,7 +19,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.vibecode.habithero",
-      "buildNumber": "2",
+      "buildNumber": "14",
       "infoPlist": {
         "NSCameraUsageDescription": "Habit Hero uses the camera to let you take progress photos and visual reminders for your habits.",
         "NSMicrophoneUsageDescription": "Habit Hero uses the microphone to record voice notes and audio reminders to help you track your habit progress."
@@ -59,7 +59,8 @@
     "extra": {
       "eas": {
         "projectId": "924fc6a4-56e5-461e-8fc9-7d8468c895b1"
-      }
+      },
+      "backendUrl": "https://cd-backend-example-production.up.railway.app"
     }
   }
 }
