--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.39.0",
+    "@expo/metro-runtime": "~5.0.5",
     "@expo/react-native-action-sheet": "^4.1.1",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -36,7 +37,7 @@
     "@shopify/flash-list": "1.7.6",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "expo": "53.0.22",
+    "expo": "~53.0.23",
     "expo-application": "~6.1.5",
     "expo-asset": "~11.1.7",
     "expo-auth-session": "~6.2.1",
@@ -103,8 +104,9 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-view-shot": "~4.0.3",
-    "react-native-web": "~0.20.0",
+    "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
+    "sharp": "^0.34.4",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
