Add iOS Widget Extension - Build 22
- Created HabitHeroWidgetExtension target in Xcode
- Added HabitHeroWidget.swift with SwiftUI widget UI
- Added HabitSelectionIntent.swift for widget configuration
- Added HabitProvider.swift for widget data management
- Added Info.plist for widget extension
- Updated app.json with App Groups entitlements
- Added WidgetService.ts for data sharing between app and widget
- Added WidgetSettingsScreen.tsx for widget management
- Updated App.tsx to initialize widget service
- Updated SettingsScreen.tsx with widget settings navigation
- Updated AppNavigator.tsx with widget settings route

Status: Widget extension created, needs Info.plist configuration fix
Next: Fix duplicate Info.plist build error and test widget functionality

--- a/app.json
+++ b/app.json
@@ -29,10 +29,15 @@
       "deploymentTarget": "15.0",
       "infoPlist": {
         "NSCameraUsageDescription": "Habit Hero uses the camera to let you take progress photos and visual reminders for your habits.",
-        "NSMicrophoneUsageDescription": "Habit Hero uses the microphone to record voice notes and audio reminders to help you track your habit progress."
+        "NSMicrophoneUsageDescription": "Habit Hero uses the microphone to record voice notes and audio reminders to help you track your habit progress.",
+        "NSSupportsAutomaticTermination": true,
+        "NSSupportsSuddenTermination": true
       },
       "config": {
         "usesNonExemptEncryption": false
+      },
+      "entitlements": {
+        "com.apple.security.application-groups": ["group.com.vibecode.habithero"]
       }
     },
     "android": {
