--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -7,9 +7,6 @@ workflows:
         XCODE_WORKSPACE: "ios/HabitHero.xcworkspace"
         XCODE_SCHEME: "HabitHero"
         BUNDLE_ID: "com.vibecode.habithero"
-        APP_STORE_CONNECT_ISSUER_ID: "your-issuer-id"
-        APP_STORE_CONNECT_KEY_IDENTIFIER: "your-key-id"
-        APP_STORE_CONNECT_PRIVATE_KEY: "your-private-key"
       xcode: latest
       cocoapods: default
       node: 20
@@ -19,10 +16,10 @@ workflows:
           keychain initialize
       - name: Set up signing certificate
         script: |
-          app-store-connect fetch-signing-files $BUNDLE_ID --type IOS_APP_STORE --create
+          echo "Skipping App Store Connect certificate setup - using development signing"
       - name: Set up provisioning profile
         script: |
-          app-store-connect fetch-signing-files $BUNDLE_ID --type IOS_APP_STORE --create
+          echo "Skipping App Store Connect provisioning setup - using development profile"
       - name: Install dependencies
         script: |
           npm install
@@ -34,7 +31,8 @@ workflows:
           xcode-project build-ipa \
             --workspace "$XCODE_WORKSPACE" \
             --scheme "$XCODE_SCHEME" \
-            --destination "generic/platform=iOS"
+            --destination "generic/platform=iOS" \
+            --configuration "Release"
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
